client/www/css/mobile/main.less
@import "../basic/variable";
@import "./profile.less";
@import "mobile-variable";

body {
    position: relative;
}
.hidden {
    display: none !important;
}
.b-signin-wrapper {
    margin-top: 0;
    padding-top: 2em;
    margin-bottom: 0;
}
.b-signin-container {
    padding: 0 0 70px;
}
.full-height {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;

    .mobile.bottom {
        bottom: 0 !important;
    }
    .mobile.attached {
        position: absolute !important;
    }
}
.full-wide {
    width: 100% !important;
}
.mobile.bottom {
    bottom: 0;
}
.mobile.attached {
    position: fixed !important;
}
.bottom.button {
    bottom: 0;
}
.attached.button {
    position: absolute !important;
}
.ui.brand.error.message {
    margin-left: 0;
    margin-right: 0;
}
.invisible {
    visibility: hidden;
}
.b-signin-wide form {
    padding-top: 0;
}
.has-bottom, .has-footer {
    padding-bottom: 70px;
}
.b-bind-mobile-container {
    padding-bottom: 2em;
}
.b-wechat-frame {
    background-color: transparent !important;
    height: 410px !important;
    min-height: 410px !important;
    max-width: 100%;
    min-width: 100%;
    border: none;
}
.b-mobile.back-color {
    background-color: @color-mobile;
}
.b-mobile.stretch {
    position: absolute;
    width: 100%;
    min-height: 100%;
}
.white.background {
    background-color: white;
    color: black;
    text-shadow: none;
}
.grey.background {
    background-color: #d2d2d2;
    color: black;
    text-shadow: none;
}
.transparent {
    background-color: transparent !important;
    border: none !important;
    box-shadow: none !important;

    > * {
        border: none !important;
        box-shadow: none !important;
    }
}
.white.color {
    color: white;
}
.shadowed {
    text-shadow: 2px 2px 5px #000000;
}
.white.header {
    color: white !important;
}
.ui.fixed.inverted.menu.b-mobile {
    background-color: @color-mobile;

    .left.aligned.item {
        text-align: left;
        -webkit-box-pack: initial;
        -ms-flex-pack: initial;
        justify-content: initial;
    }
    .item::before {
        display: none !important;
    }
}
a {
    color: black;
}
a:hover, a:active, a:focus, a.icon:hover, a.icon:active, a.icon:focus {
    color: @color-brand !important;

    & .icon {
        color: @color-brand !important;
    }
}
.header.item a, .header.item a:link, .header.item a:visited {
    color: white !important;
}
.has-header {
    padding-top: 48px !important;
}
.stretch.has-header {
    padding-top: 0;
    margin-top: -48px;
}
.main.body {
    min-height: 100%;
}
.bottom.stuck {
    position: absolute;
    bottom: 0;

    .basic.button {
        white-space: nowrap;
        padding-left: 15px;
        padding-right: 15px;
    }
}
.extra.vertical.padded.container {
    padding-top: 20px;
    padding-bottom: 20px;
}
.b-profile.menu {
    background-color: transparent !important;
    border-radius: 0;
}
.b-profile.menu > .item {
    color: white !important;
    border-radius: 0;

    &.active, &:hover, &:active, &:focus {
        background-color: @color-brand !important;
        color: white !important;
    }
}
.grey.color {
    color: @color-grey-dark;
}
.ui.brand.message-wrapper.container {
    z-index: 4;
    position: fixed;
    top: 100px;
    width: 100%;

    .ui.brand.message {
        position: relative;
        margin: 0 auto;
        display: inline-block;
        background: rgba(0, 0, 0, 0.5);
        font-size: larger;
        padding: 10px 50px 10px 20px;
        box-shadow: 0 0 0 0;
        border: none;

        .remove.icon, .circle.icon {
            cursor: pointer;
            margin-right: -40px;
            margin-left: 10em;
            letter-spacing: 2em;
        }
    }
}
.ui.brand.message {
    background-color: @color-grey-dark;
    border-color: @color-grey-dark;
    box-shadow: 0 0 0 1px @color-grey-dark inset, 0 0 0 0 transparent;
    color: white;

    .header {
        color: @color-grey-lighter;
        font-weight: normal;
    }
}
.ui.brand.error.message {
    background-color: @color-brand-darker;
    border-color: @color-brand-darker;
    box-shadow: 0 0 0 1px @color-brand-darker inset, 0 0 0 0 transparent;
    color: white;
    padding: 5px 10px;
    font-size: smaller;
    position: relative;

    .list {
        list-style-type: none;
        margin-right: 20px;

        li {
            margin: 0;
        }
        li::before {
            content: '';
        }
        li:nth-child(n+3) {
            display: none;
        }
    }
    .remove.icon, .circle.icon {
        position: absolute;
        right: 5px;
        top: 0;
        left: 0;
        bottom: 0;
        display: block;
        margin: auto 0 auto auto;
        cursor: pointer;
    }
}
.ui.form .fields.error .field textarea, .ui.form .fields.error .field select, .ui.form .fields.error .field input:not([type]), .ui.form .fields.error .field input[type="date"], .ui.form .fields.error .field input[type="datetime-local"], .ui.form .fields.error .field input[type="email"], .ui.form .fields.error .field input[type="number"], .ui.form .fields.error .field input[type="password"], .ui.form .fields.error .field input[type="search"], .ui.form .fields.error .field input[type="tel"], .ui.form .fields.error .field input[type="time"], .ui.form .fields.error .field input[type="text"], .ui.form .fields.error .field input[type="url"], .ui.form .field.error textarea, .ui.form .field.error select, .ui.form .field.error input:not([type]), .ui.form .field.error input[type="date"], .ui.form .field.error input[type="datetime-local"], .ui.form .field.error input[type="email"], .ui.form .field.error input[type="number"], .ui.form .field.error input[type="password"], .ui.form .field.error input[type="search"], .ui.form .field.error input[type="tel"], .ui.form .field.error input[type="time"], .ui.form .field.error input[type="text"], .ui.form .field.error input[type="url"] {
    border-color: @color-brand;
}
// TODO:Delete the following hack and find a solution for old mobile browsers.
.ui.form .ui.input > input {
    width: 100% !important;
}
.ui.form .field.absolute-prompt .ui.input > input {
    width: 0 !important;
}
.ui.form .field .ui.input > input[name=verificationCode] {
    width: 0 !important;
}
// end TODO

.ui.form .fields {
    -webkit-flex-wrap: inherit;
    -ms-flex-wrap: inherit;
    flex-wrap: inherit;
}
.center.stuck {
    display: table;
    height: 100%;
    width: 100%;

    .content {
        display: table-cell;
        vertical-align: middle;
    }
    .content.center {
        text-align: center;

        img.e {
            width: 286px;
        }
        h3.national-header {
            font-size: 1.25em;
            font-weight: normal;
            margin: 1em 0;
        }
        .national-content {
            margin: 0 auto;

            h5.national-info {
                width: 240px;
                margin: 0 auto;
                font-size: 1.125em;
                font-weight: normal;
                text-align: left;
            }
        }
        a.e-button {
            background-color: transparent;
            border: 1px solid white;
            color: white;
            font-size: 1.5em;
            max-width: 400px;
            margin: 0 auto;

            &:hover {
                background: rgba(0, 0, 0, 0.2);
                color: white !important;
            }
        }
    }
}
.middle.aligned {
    vertical-align: middle;
}
@media only screen and (max-width:767px) {
    .interests-form .ui.items > .item {
        margin-top: 1em !important;
        margin-bottom: 1em !important;
    }
}
.interests-form .item .header {
    margin-left: 1em !important;
}

